# ori

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/commands/: add.rs  alias.rs  create.rs  list.rs  mod.rs  new.rs
