[package]
name = "ori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
git2 = "0.15.0"
clap = { version = "4.0.7", features = ["derive", "suggestions"] }
colored = "2.0.0"
dirs = "4.0.0"
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
